# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
